# ros2_proj

./: README.md  package.xml  setup.py
autonomous_tb/: campus_delivery_node.py  data_collection_node.py  exploration_node.py  yield_controller_node.py
config/: campus_delivery_params.yaml  nav2_params.yaml  nav2_view.rviz
docs/: 课程架构说明.md
launch/: campus_delivery.launch.py  data_collection_launch.py  exploration.launch.py  nav2_mission.launch.py
scripts/: generate_blank_map.py  start_project.sh
src/campus_delivery_mission/: package.xml  setup.cfg  setup.py
src/campus_delivery_mission/campus_delivery_mission/: mission_manager.py  yield_controller.py
src/campus_delivery_mission/config/: waypoints.yaml
src/campus_delivery_mission/launch/: mission.launch.py
src/campus_delivery_mission/resource/: campus_delivery_mission
